--- a/src/css/list.css
+++ b/src/css/list.css
@@ -11,7 +11,7 @@
 .select {background: #ff000082 !important}
 .unselect:hover {background: #0037ff1f !important}
 .select .fas.fa-times.close {
-    display:none
+    display:none !important
 }
 
 .controls {
@@ -33,4 +33,8 @@
 }
 .app-bar button {
     display:none !important;
+}
+
+.checkbox-content{
+    font-size: 24px
 }
