--- a/src/css/controls.css
+++ b/src/css/controls.css
@@ -1,16 +1,9 @@
-
-.controls {
-    margin:5px
-}
-.controls input{
-    border: 1px solid;
-}
-.add-button{
+.add_button {
     margin-left: 10px;
 }
-.control-buton{
-    margin-left: 5px;
-}
-.app-bar button {
-    display:none !important;
-}
+
+.btn_wrp {
+    position: absolute;
+    bottom: 40px;
+    right: 40px;
+  }
